feat: :memo: Documentation with swagger
